# ravi-torch-cephes

./: CMakeLists.txt
cephes/: CMakeLists.txt  cepheswrap.lua  mconf.h  torch_mtherr.c
cephes/bessel/: airy.c  hyp2f1.c  hyperg.c  i0.c  i1.c  iv.c  j0.c  j1.c  jn.c  jv.c  k0.c  k1.c  kn.c  psi.c  struve.c  yn.c
cephes/cmath/: acosh.c  asin.c  asinh.c  atan.c  atanh.c  cbrt.c  chbevl.c  clog.c  cmplx.c  const.c  cosh.c  drand.c  dtestvec.c  exp.c  exp10.c  exp2.c  fabs.c  floor.c  isnan.c  log.c  log10.c  log2.c  polevl.c  pow.c  powi.c  protos.h  round.c  sin.c  sincos.c  sindg.c  sinh.c  sqrt.c  tan.c  tandg.c  tanh.c  unity.c
cephes/cprob/: bdtr.c  btdtr.c  chdtr.c  expx2.c  fdtr.c  gamma.c  gdtr.c  igam.c  igami.c  incbet.c  incbi.c  kolmogorov.c  nbdtr.c  ndtr.c  ndtri.c  pdtr.c  stdtr.c
cephes/ellf/: ellie.c  ellik.c  ellpe.c  ellpj.c  ellpk.c  mconf.h
cephes/include/: cephes.h
cephes/luabindings/: cephes_lua_api.c
cephes/luasrc/: error_handling.lua  init.lua
cephes/luasrc/tests/: testCprob.lua  testErrorHandling.lua  test_all.lua  test_bessel.lua  test_cmath.lua  test_cprob.lua  test_ellf.lua  test_limits.lua  test_misc.lua  test_polyn.lua  test_vectorized.lua
cephes/misc/: beta.c  dawsn.c  ei.c  expn.c  fac.c  fresnl.c  mconf.h  planck.c  polylog.c  rgamma.c  shichi.c  sici.c  simpsn.c  spence.c  zeta.c  zetac.c
cephes/polyn/: euclid.c  mconf.h  polmisc.c  polrt.c  polyn.c  revers.c
